updated tabs and collapsibles

--- a/index.html
+++ b/index.html
@@ -344,128 +344,144 @@
 
     <div class="row">
         <div class="container hero">
-            <label class="collapsible button ripple-effect raised" for="collapsible-toggle-1">collapsible 1</label>
-            <input type="radio" class="collapsible-toggle" id="collapsible-toggle-1" name="collapsibles" checked>
-            <div class="collapsible__content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, facilis, ipsa. Enim placeat vel iure dolore
-                    omnis! Harum veniam quos odio nobis excepturi ipsam, molestiae porro voluptate incidunt quis dolorum?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi dolorum sint ullam facilis alias, eos voluptates,
-                    minus asperiores atque laudantium laboriosam ex voluptatem quam cum. Earum nesciunt natus, quidem molestiae
-                    rem inventore eligendi debitis deleniti ipsam voluptatibus perspiciatis doloremque quaerat temporibus
-                    et minima facere distinctio, blanditiis officiis. Voluptate tenetur, sequi.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat incidunt expedita quo necessitatibus, nobis,
-                    pariatur amet. Quaerat ut ea culpa perferendis esse error nobis. Similique, iure pariatur molestias quasi
-                    fuga quod quidem quo veniam. Voluptas?</p>
+            <div class="collapsible">
+                <label class="collapsible__label button ripple-effect raised" for="collapsible-toggle-1">collapsible 1</label>
+                <input type="radio" class="collapsible__toggle" id="collapsible-toggle-1" name="collapsibles" checked>
+                <div class="collapsible__content">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, facilis, ipsa. Enim placeat vel iure
+                        dolore omnis! Harum veniam quos odio nobis excepturi ipsam, molestiae porro voluptate incidunt quis
+                        dolorum?
+                    </p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi dolorum sint ullam facilis alias, eos
+                        voluptates, minus asperiores atque laudantium laboriosam ex voluptatem quam cum. Earum nesciunt natus,
+                        quidem molestiae rem inventore eligendi debitis deleniti ipsam voluptatibus perspiciatis doloremque
+                        quaerat temporibus et minima facere distinctio, blanditiis officiis. Voluptate tenetur, sequi.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat incidunt expedita quo necessitatibus,
+                        nobis, pariatur amet. Quaerat ut ea culpa perferendis esse error nobis. Similique, iure pariatur
+                        molestias quasi fuga quod quidem quo veniam. Voluptas?</p>
+                </div>
             </div>
 
-            <label class="collapsible button ripple-effect raised" for="collapsible-toggle-2">collapsible 2</label>
-            <input type="radio" class="collapsible-toggle" id="collapsible-toggle-2" name="collapsibles">
-            <div class="collapsible__content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, facilis, ipsa. Enim placeat vel iure dolore
-                    omnis! Harum veniam quos odio nobis excepturi ipsam, molestiae porro voluptate incidunt quis dolorum?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi dolorum sint ullam facilis alias, eos voluptates,
-                    minus asperiores atque laudantium laboriosam ex voluptatem quam cum. Earum nesciunt natus, quidem molestiae
-                    rem inventore eligendi debitis deleniti ipsam voluptatibus perspiciatis doloremque quaerat temporibus
-                    et minima facere distinctio, blanditiis officiis. Voluptate tenetur, sequi.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat incidunt expedita quo necessitatibus, nobis,
-                    pariatur amet. Quaerat ut ea culpa perferendis esse error nobis. Similique, iure pariatur molestias quasi
-                    fuga quod quidem quo veniam. Voluptas?</p>
+            <div class="collapsible">
+                <label class="collapsible__label button ripple-effect raised" for="collapsible-toggle-2">collapsible 2</label>
+                <input type="radio" class="collapsible__toggle" id="collapsible-toggle-2" name="collapsibles">
+                <div class="collapsible__content">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, facilis, ipsa. Enim placeat vel iure
+                        dolore omnis! Harum veniam quos odio nobis excepturi ipsam, molestiae porro voluptate incidunt quis
+                        dolorum?
+                    </p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi dolorum sint ullam facilis alias, eos
+                        voluptates, minus asperiores atque laudantium laboriosam ex voluptatem quam cum. Earum nesciunt natus,
+                        quidem molestiae rem inventore eligendi debitis deleniti ipsam voluptatibus perspiciatis doloremque
+                        quaerat temporibus et minima facere distinctio, blanditiis officiis. Voluptate tenetur, sequi.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat incidunt expedita quo necessitatibus,
+                        nobis, pariatur amet. Quaerat ut ea culpa perferendis esse error nobis. Similique, iure pariatur
+                        molestias quasi fuga quod quidem quo veniam. Voluptas?</p>
+                </div>
             </div>
 
-            <label class="collapsible button ripple-effect raised" for="collapsible-toggle-3">collapsible 3</label>
-            <input type="radio" class="collapsible-toggle" id="collapsible-toggle-3" name="collapsibles">
-            <div class="collapsible__content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, facilis, ipsa. Enim placeat vel iure dolore
-                    omnis! Harum veniam quos odio nobis excepturi ipsam, molestiae porro voluptate incidunt quis dolorum?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi dolorum sint ullam facilis alias, eos voluptates,
-                    minus asperiores atque laudantium laboriosam ex voluptatem quam cum. Earum nesciunt natus, quidem molestiae
-                    rem inventore eligendi debitis deleniti ipsam voluptatibus perspiciatis doloremque quaerat temporibus
-                    et minima facere distinctio, blanditiis officiis. Voluptate tenetur, sequi.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat incidunt expedita quo necessitatibus, nobis,
-                    pariatur amet. Quaerat ut ea culpa perferendis esse error nobis. Similique, iure pariatur molestias quasi
-                    fuga quod quidem quo veniam. Voluptas?</p>
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="container hero">
-            <div class="tab__group">
-                <label for="tab-1-toggle" class="tab ripple-effect">Lorem</label>
-                <label for="tab-2-toggle" class="tab ripple-effect">Deleniti</label>
-                <label for="tab-3-toggle" class="tab ripple-effect">Aliquid</label>
-            </div>
-
-            <input type="radio" name="tabs" class="tab-toggle" id="tab-1-toggle" checked>
-            <div class="tab__content red">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aliquid deserunt rerum cupiditate dolor repudiandae,
-                    vitae et suscipit consequatur reprehenderit sed qui expedita, pariatur itaque facilis vel, consequuntur
-                    cumque ducimus.
-                </p>
-                <p>Excepturi nostrum provident, rerum eveniet, quam ut neque consectetur, ex quo mollitia ipsa voluptatibus
-                    voluptas? Delectus, nam, autem. Accusantium necessitatibus enim exercitationem architecto eius? Excepturi
-                    accusamus aliquid, voluptatem cupiditate aliquam!</p>
-            </div>
-
-            <input type="radio" name="tabs" class="tab-toggle" id="tab-2-toggle">
-            <div class="tab__content green">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae fuga asperiores consequuntur ea voluptatibus
-                    eius, ut possimus dignissimos aspernatur mollitia praesentium, autem, esse voluptatum molestiae dolorum
-                    aliquid atque, sint earum.</p>
-                <p>Rem inventore nobis pariatur ratione voluptatibus magni itaque optio libero ipsum alias quidem, voluptatum
-                    ut sequi consequatur delectus modi excepturi a animi fugiat obcaecati fuga nostrum deserunt vel. Similique,
-                    debitis.
-                </p>
-            </div>
-
-            <input type="radio" name="tabs" class="tab-toggle" id="tab-3-toggle">
-            <div class="tab__content blue">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum quibusdam voluptas aut, et recusandae doloribus
-                    sapiente error totam perferendis quis corrupti nostrum praesentium temporibus quidem, doloremque repellendus
-                    esse, harum architecto.</p>
-                <p>Qui dignissimos maxime quidem explicabo porro deleniti impedit eius sunt officia, laudantium iusto fuga eum
-                    iste fugit aut quam excepturi! Eos doloremque modi veniam fugiat! Blanditiis ipsa odio enim consequatur!</p>
+            <div class="collapsible">
+                <label class="collapsible__label button ripple-effect raised" for="collapsible-toggle-3">collapsible 3</label>
+                <input type="radio" class="collapsible__toggle" id="collapsible-toggle-3" name="collapsibles">
+                <div class="collapsible__content">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, facilis, ipsa. Enim placeat vel iure
+                        dolore omnis! Harum veniam quos odio nobis excepturi ipsam, molestiae porro voluptate incidunt quis
+                        dolorum?
+                    </p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi dolorum sint ullam facilis alias, eos
+                        voluptates, minus asperiores atque laudantium laboriosam ex voluptatem quam cum. Earum nesciunt natus,
+                        quidem molestiae rem inventore eligendi debitis deleniti ipsam voluptatibus perspiciatis doloremque
+                        quaerat temporibus et minima facere distinctio, blanditiis officiis. Voluptate tenetur, sequi.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat incidunt expedita quo necessitatibus,
+                        nobis, pariatur amet. Quaerat ut ea culpa perferendis esse error nobis. Similique, iure pariatur
+                        molestias quasi fuga quod quidem quo veniam. Voluptas?</p>
+                </div>
             </div>
         </div>
     </div>
 
     <div class="row">
         <div class="container hero">
-            <div class="tab__group">
-                <label for="tab-4-toggle" class="tab ripple-effect">Lorem</label>
-                <label for="tab-5-toggle" class="tab ripple-effect">Deleniti</label>
-                <label for="tab-6-toggle" class="tab ripple-effect">Aliquid</label>
-            </div>
+            <div class="tabs">
+                <div class="tab__group">
+                    <label for="tab-1-toggle" class="tab__item ripple-effect">Lorem</label>
+                    <label for="tab-2-toggle" class="tab__item ripple-effect">Deleniti</label>
+                    <label for="tab-3-toggle" class="tab__item ripple-effect">Aliquid</label>
+                </div>
 
-            <input type="radio" name="tabs-2" class="tab-toggle" id="tab-4-toggle">
-            <div class="tab__content red">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aliquid deserunt rerum cupiditate dolor repudiandae,
-                    vitae et suscipit consequatur reprehenderit sed qui expedita, pariatur itaque facilis vel, consequuntur
-                    cumque ducimus.
-                </p>
-                <p>Excepturi nostrum provident, rerum eveniet, quam ut neque consectetur, ex quo mollitia ipsa voluptatibus
-                    voluptas? Delectus, nam, autem. Accusantium necessitatibus enim exercitationem architecto eius? Excepturi
-                    accusamus aliquid, voluptatem cupiditate aliquam!</p>
-            </div>
+                <input type="radio" name="tabs" class="tab__toggle" id="tab-1-toggle" checked>
+                <div class="tab__content red">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aliquid deserunt rerum cupiditate dolor
+                        repudiandae, vitae et suscipit consequatur reprehenderit sed qui expedita, pariatur itaque facilis
+                        vel, consequuntur cumque ducimus.
+                    </p>
+                    <p>Excepturi nostrum provident, rerum eveniet, quam ut neque consectetur, ex quo mollitia ipsa voluptatibus
+                        voluptas? Delectus, nam, autem. Accusantium necessitatibus enim exercitationem architecto eius? Excepturi
+                        accusamus aliquid, voluptatem cupiditate aliquam!</p>
+                </div>
 
-            <input type="radio" name="tabs-2" class="tab-toggle" id="tab-5-toggle" checked>
-            <div class="tab__content green">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae fuga asperiores consequuntur ea voluptatibus
-                    eius, ut possimus dignissimos aspernatur mollitia praesentium, autem, esse voluptatum molestiae dolorum
-                    aliquid atque, sint earum.</p>
-                <p>Rem inventore nobis pariatur ratione voluptatibus magni itaque optio libero ipsum alias quidem, voluptatum
-                    ut sequi consequatur delectus modi excepturi a animi fugiat obcaecati fuga nostrum deserunt vel. Similique,
-                    debitis.
-                </p>
-            </div>
+                <input type="radio" name="tabs" class="tab__toggle" id="tab-2-toggle">
+                <div class="tab__content green">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae fuga asperiores consequuntur ea
+                        voluptatibus eius, ut possimus dignissimos aspernatur mollitia praesentium, autem, esse voluptatum
+                        molestiae dolorum aliquid atque, sint earum.</p>
+                    <p>Rem inventore nobis pariatur ratione voluptatibus magni itaque optio libero ipsum alias quidem, voluptatum
+                        ut sequi consequatur delectus modi excepturi a animi fugiat obcaecati fuga nostrum deserunt vel.
+                        Similique, debitis.
+                    </p>
+                </div>
 
-            <input type="radio" name="tabs-2" class="tab-toggle" id="tab-6-toggle">
-            <div class="tab__content blue">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum quibusdam voluptas aut, et recusandae doloribus
-                    sapiente error totam perferendis quis corrupti nostrum praesentium temporibus quidem, doloremque repellendus
-                    esse, harum architecto.</p>
-                <p>Qui dignissimos maxime quidem explicabo porro deleniti impedit eius sunt officia, laudantium iusto fuga eum
-                    iste fugit aut quam excepturi! Eos doloremque modi veniam fugiat! Blanditiis ipsa odio enim consequatur!</p>
+                <input type="radio" name="tabs" class="tab__toggle" id="tab-3-toggle">
+                <div class="tab__content blue">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum quibusdam voluptas aut, et recusandae
+                        doloribus sapiente error totam perferendis quis corrupti nostrum praesentium temporibus quidem, doloremque
+                        repellendus esse, harum architecto.</p>
+                    <p>Qui dignissimos maxime quidem explicabo porro deleniti impedit eius sunt officia, laudantium iusto fuga
+                        eum iste fugit aut quam excepturi! Eos doloremque modi veniam fugiat! Blanditiis ipsa odio enim consequatur!</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="container hero">
+            <div class="tabs">
+                <div class="tab__group">
+                    <label for="tab-4-toggle" class="tab__item ripple-effect">Lorem</label>
+                    <label for="tab-5-toggle" class="tab__item ripple-effect">Deleniti</label>
+                    <label for="tab-6-toggle" class="tab__item ripple-effect">Aliquid</label>
+                </div>
+
+                <input type="radio" name="tabs-2" class="tab__toggle" id="tab-4-toggle">
+                <div class="tab__content red">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aliquid deserunt rerum cupiditate dolor
+                        repudiandae, vitae et suscipit consequatur reprehenderit sed qui expedita, pariatur itaque facilis
+                        vel, consequuntur cumque ducimus.
+                    </p>
+                    <p>Excepturi nostrum provident, rerum eveniet, quam ut neque consectetur, ex quo mollitia ipsa voluptatibus
+                        voluptas? Delectus, nam, autem. Accusantium necessitatibus enim exercitationem architecto eius? Excepturi
+                        accusamus aliquid, voluptatem cupiditate aliquam!</p>
+                </div>
+
+                <input type="radio" name="tabs-2" class="tab__toggle" id="tab-5-toggle" checked>
+                <div class="tab__content green">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae fuga asperiores consequuntur ea
+                        voluptatibus eius, ut possimus dignissimos aspernatur mollitia praesentium, autem, esse voluptatum
+                        molestiae dolorum aliquid atque, sint earum.</p>
+                    <p>Rem inventore nobis pariatur ratione voluptatibus magni itaque optio libero ipsum alias quidem, voluptatum
+                        ut sequi consequatur delectus modi excepturi a animi fugiat obcaecati fuga nostrum deserunt vel.
+                        Similique, debitis.
+                    </p>
+                </div>
+
+                <input type="radio" name="tabs-2" class="tab__toggle" id="tab-6-toggle">
+                <div class="tab__content blue">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum quibusdam voluptas aut, et recusandae
+                        doloribus sapiente error totam perferendis quis corrupti nostrum praesentium temporibus quidem, doloremque
+                        repellendus esse, harum architecto.</p>
+                    <p>Qui dignissimos maxime quidem explicabo porro deleniti impedit eius sunt officia, laudantium iusto fuga
+                        eum iste fugit aut quam excepturi! Eos doloremque modi veniam fugiat! Blanditiis ipsa odio enim consequatur!</p>
+                </div>
             </div>
         </div>
     </div>
