* z-indexes updated accordingly to the material design guidelines
* tabs and buttons are now completely independent

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <input type="checkbox" class="overlay-toggle" id="side-nav-toggle">
     <div class="overlay">
         <label class="overlay__bg closes-overlay" id="sidenav-bg" for="side-nav-toggle"></label>
-        <div class="sidenav right transition slide-right" trigger="sidenav-btn" idle="sidenav-bg">
+        <div class="sidenav right shadow-16 transition slide-right" trigger="sidenav-btn" idle="sidenav-bg">
             <a href="#" class="nav__item ripple-effect">Home</a>
             <a href="#" class="nav__item ripple-effect">About Us</a>
             <a href="#" class="nav__item ripple-effect">Contact</a>
@@ -286,7 +286,7 @@
         <div class="container margin-bottom">
             <div class="menu-hover">
                 <button class="button">Lorem ipsum</button>
-                <ul class="menu__content shadow-3">
+                <ul class="menu__content shadow-8">
                     <li class="menu__item">Lorem </li>
                     <li class="menu__item border-bottom">Lorem </li>
                     <li class="menu__item">Lorem </li>
@@ -295,7 +295,7 @@
 
             <div class="menu">
                 <button class="button menu__button">Lorem ipsum dolor sit amet</button>
-                <ul class="menu__content top-right shadow-3">
+                <ul class="menu__content top-right shadow-8">
                     <li class="menu__item">Lorem ipsum dolor sit amet</li>
                     <li class="menu__item">Neque, illum</li>
                     <li class="menu__item">Ipsam doloribus</li>
@@ -403,7 +403,7 @@
     <div class="row">
         <div class="container hero">
             <div class="tabs">
-                <div class="tab__group">
+                <div class="tab__bar">
                     <label for="tab-1-toggle" class="tab__item ripple-effect">Lorem</label>
                     <label for="tab-2-toggle" class="tab__item ripple-effect">Deleniti</label>
                     <label for="tab-3-toggle" class="tab__item ripple-effect">Aliquid</label>
@@ -446,7 +446,7 @@
     <div class="row">
         <div class="container hero">
             <div class="tabs">
-                <div class="tab__group">
+                <div class="tab__bar full-width">
                     <label for="tab-4-toggle" class="tab__item ripple-effect">Lorem</label>
                     <label for="tab-5-toggle" class="tab__item ripple-effect">Deleniti</label>
                     <label for="tab-6-toggle" class="tab__item ripple-effect">Aliquid</label>
@@ -614,7 +614,7 @@
         <div class="container hero">
             <div class="menu">
                 <button class="button menu__button">menu</button>
-                <ul class="menu__content shadow-3">
+                <ul class="menu__content shadow-8">
                     <li class="menu__item">Lorem.</li>
                     <li class="menu__item">Assumenda!</li>
                     <li class="menu__item">Molestias!</li>
