* removed unnecessary stylings
* material inputs are now spread into three stylesheets

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <link rel="stylesheet" href="css/tags-and-badges.css">
     <link rel="stylesheet" href="css/dialogs.css">
     <link rel="stylesheet" href="css/material-inputs.css">
+    <link rel="stylesheet" href="css/material-inputs-slider.css">
+    <link rel="stylesheet" href="css/material-inputs-disabled-states.css">
     <link rel="stylesheet" href="css/collapsibles-and-tabs.css">
     <link rel="stylesheet" href="css/transitions.css">
     <link rel="stylesheet" href="css/ripples.css">
