* containers take full width
* tweaked footer spacing

* added inline lists

* updated minified versions

* updated sandbox

--- a/index.html
+++ b/index.html
@@ -625,6 +625,16 @@
         </div>
     </div>
 
+    <div class="row">
+        <div class="contianer hero">
+            <ul class="list inline">
+                <li>Lorem.</li>
+                <li>Similique?</li>
+                <li>Iusto.</li>
+            </ul>
+        </div>
+    </div>
+
     <div class="footer">
         <div class="hero">
             <div class="footer__left">
